--- a/views/project_views.xml
+++ b/views/project_views.xml
@@ -1,40 +1,131 @@
 <odoo>
     <data>
-        <record id="view_project_form" model="ir.ui.view">
+        <!-- Form View -->
+        <record id="view_project_form_project_management" model="ir.ui.view">
             <field name="name">project.management.form</field>
             <field name="model">project.management</field>
             <field name="arch" type="xml">
-                <form> 
-                    <sheet>
+                <form string="Project" class="o_form_project_project" js_class="project_form">
+                    <field name="analytic_account_id" invisible="1"/>
+                    <header>
+                        <button name="667" string="Share Read-only" type="action" class="oe_highlight" 
+                                groups="project.group_project_manager" 
+                                invisible="privacy_visibility != 'portal'" 
+                                context="{'default_access_mode': 'read', 'dialog_size': 'medium'}" 
+                                data-hotkey="r"/>
+                        <button name="667" string="Share Editable" type="action" class="oe_highlight" 
+                                groups="project.group_project_manager" 
+                                invisible="privacy_visibility != 'portal'" 
+                                context="{'default_access_mode': 'edit', 'dialog_size': 'medium'}" 
+                                data-hotkey="e"/>
+                    </header>
+                    <sheet string="Project">
+                        <div class="oe_button_box" name="button_box" groups="base.group_user">
+                            <button class="oe_stat_button" name="668" type="action" icon="fa-users" 
+                                    groups="project.group_project_manager" 
+                                    invisible="privacy_visibility != 'portal'">
+                                <div class="o_field_widget o_stat_info">
+                                    <span class="o_stat_value">
+                                        <field name="collaborator_count" nolabel="1"/>
+                                    </span>
+                                    <span class="o_stat_text">
+                                        Collaborators
+                                    </span>
+                                </div>
+                            </button>
+                        </div>
+                        <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
+                        <div class="oe_title">
+                            <h1 class="d-flex flex-row">
+                                <field name="is_favorite" nolabel="1" widget="boolean_favorite" class="me-2"/>
+                                <field name="name" options="{'line_breaks': False}" widget="text" 
+                                       class="o_text_overflow" placeholder="e.g. Office Party"/>
+                            </h1>
+                        </div>
                         <group>
-                            <field name="name"/>
-                            <field name="description"/>
-                            <field name="start_date"/>
-                            <field name="end_date"/>
-                            <field name="state"/>
+                            <group>
+                                <field name="partner_id" widget="res_partner_many2one"/>
+                                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                            </group>
+                            <group>
+                                <field name="active" invisible="1"/>
+                                <field name="user_id" string="Project Manager" widget="many2one_avatar_user" 
+                                       readonly="not active" domain="[('share', '=', False)]" 
+                                       options="{'no_quick_create': True}"/>
+                            </group>
                         </group>
+                        <notebook>
+                            <page name="description" string="Description">
+                                <field name="description" options="{'resizable': false}" 
+                                       placeholder="Project description..."/>
+                            </page>
+                            <page name="settings" string="Settings">
+                                <group>
+                                    <group>
+                                        <field name="privacy_visibility" widget="radio"/>
+                                    </group>
+                                </group>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
         </record>
-
-        <record id="view_project_tree" model="ir.ui.view">
+        
+        
+        <!-- Tree View -->
+        <record id="view_project_tree_project_management" model="ir.ui.view">
             <field name="name">project.management.tree</field>
             <field name="model">project.management</field>
             <field name="arch" type="xml">
-                <form> 
-                    <sheet>
-                        <group>
-                            <field name="name"/>
-                            <field name="description"/>
-                            <field name="start_date"/>
-                            <field name="end_date"/>
-                            <field name="state"/>
-                        </group>
-                    </sheet>
-                </form>
+                <tree string="Projects" multi_edit="1" sample="1"  js_class="project_project_list">
+                    <field name="name"/>
+                    <field name="description"/>
+                    <field name="date"/>
+                    <field name="state"/>
+                </tree>
             </field>
         </record>
-
+        
+               
+        
+        <!-- Kanban View -->
+        <record id="view_project_kanban" model="ir.ui.view">
+            <field name="name">project.management.kanban</field>
+            <field name="model">project.management</field>
+            <field name="arch" type="xml">
+                <kanban class="o_kanban_dashboard o_project_kanban" js_class="project_project_kanban" sample="1" default_order="sequence, name, id">
+                    <field name="name"/>
+                    <field name="description"/>
+                    <field name="date_start"/>
+                    <field name="date_end"/>
+                    <field name="state"/>
+                    <field name="color"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click o_has_icon oe_kanban_content oe_kanban_card">
+                                <div class="o_kanban_primary_left">
+                                    <div class="o_primary">
+                                        <span class="o_text_overflow" t-att-title="record.name.value">
+                                            <t t-esc="record.name.value"/>
+                                        </span>
+                                        <span class="text-muted">
+                                            <t t-esc="record.description.value"/>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="o_kanban_record_bottom mt-3">
+                                    <div class="o_kanban_project_dates">
+                                        <span class="fa fa-calendar me-2" title="Start Date"/><t t-esc="record.date_start.value"/>
+                                        <span class="fa fa-long-arrow-right mx-2"/>
+                                        <span class="fa fa-calendar" title="End Date"/><t t-esc="record.date_end.value"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
     </data>
 </odoo>
