--- a/views/task_views.xml
+++ b/views/task_views.xml
@@ -5,22 +5,86 @@
         <field name="model">projects.task</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <field name="stage_id" widget="statusbar" options="{'clickable': '1'}"/>
+                </header>
                 <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" placeholder="Task Title..."/>
+                        </h1>
+                    </div>
                     <group>
-                        <field name="name"/>
-                        <field name="project_id"/>
-                        <field name="assigned_user_id"/>
-                        <field name="date_deadline"/>
-                        <field name="state"/>
-                        <field name="priority"/>
-                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                        <group>
+                            <field name="project_id"/>
+                            <field name="assigned_user_id"/>
+                            <field name="date_deadline"/>
+                            <field name="priority"/>
+                            <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                        </group>
+                        <group>
+                            <field name="create_date" readonly="1"/>
+                            <field name="write_date" readonly="1"/>
+                            <field name="create_uid" readonly="1"/>
+                            <field name="write_uid" readonly="1"/>
+                        </group>
                     </group>
                     <notebook>
-                        <page string="Description">
-                            <field name="description"/>
+                        <page string="Description" name="description">
+                            <field name="description" placeholder="Add a description..."/>
+                        </page>
+                        <page string="Timesheet" name="timesheet">
+                            <group>
+                                <group>
+                                    <field name="planned_hours" widget="float_time"/>
+                                    <field name="effective_hours" widget="float_time"/>
+                                    <field name="remaining_hours" widget="float_time"/>
+                                    <field name="total_hours_spent" widget="float_time"/>
+                                </group>
+                                <group>
+                                    <field name="progress" widget="progressbar"/>
+                                    <field name="date_start"/>
+                                    <field name="date_end"/>
+                                </group>
+                            </group>
+                        </page>
+                        <page string="Extra Info" name="extra_info">
+                            <group>
+                                <group string="Schedule">
+                                    <field name="sequence"/>
+                                    <field name="date_assign"/>
+                                    <field name="date_last_stage_update" readonly="1"/>
+                                </group>
+                                <group string="References">
+                                    <field name="ref"/>
+                                    <field name="parent_id"/>
+                                    <field name="company_id" groups="base.group_multi_company"/>
+                                </group>
+                            </group>
+                        </page>
+                        <page string="Subtasks" name="subtasks">
+                            <field name="child_ids" context="{'default_parent_id': active_id, 'default_project_id': project_id}">
+                                <tree>
+                                    <field name="name"/>
+                                    <field name="assigned_user_id"/>
+                                    <field name="planned_hours" widget="float_time" sum="Initially Planned Hours"/>
+                                    <field name="effective_hours" widget="float_time" sum="Effective Hours"/>
+                                    <field name="remaining_hours" widget="float_time" sum="Remaining Hours"/>
+                                    <field name="progress" widget="progressbar"/>
+                                    <field name="stage_id"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Notes" name="notes">
+                            <field name="notes" placeholder="Add internal notes..."/>
                         </page>
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
@@ -35,8 +99,9 @@
                 <field name="project_id"/>
                 <field name="assigned_user_id"/>
                 <field name="date_deadline"/>
-                <field name="state"/>
+                <field name="stage_id"/>
                 <field name="priority"/>
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
             </tree>
         </field>
     </record>
@@ -50,12 +115,11 @@
                 <field name="name"/>
                 <field name="project_id"/>
                 <field name="assigned_user_id"/>
-                <field name="state"/>
+                <field name="stage_id"/>
                 <filter string="My Tasks" name="my_tasks" domain="[('assigned_user_id', '=', uid)]"/>
                 <group expand="0" string="Group By">
                     <filter string="Project" name="group_by_project" context="{'group_by': 'project_id'}"/>
-                    <filter string="Status" name="group_by_state" context="{'group_by': 'state'}"/>
-                    <filter string="Personal Stage" name="group_by_personal_stage" context="{'group_by': 'personal_stage_id'}"/>
+                    <filter string="Stage" name="group_by_stage" context="{'group_by': 'stage_id'}"/>
                     <filter string="Assigned To" name="group_by_assigned" context="{'group_by': 'assigned_user_id'}"/>
                 </group>
             </search>
@@ -70,7 +134,7 @@
         <field name="name">projects.task.kanban</field>
         <field name="model">projects.task</field>
         <field name="arch" type="xml">
-            <kanban default_group_by="state" 
+            <kanban default_group_by="stage_id" 
                     class="o_kanban_small_column" 
                     records_draggable="true"
                     on_create="quick_create"
@@ -78,16 +142,14 @@
                     group_delete="true"
                     group_edit="true"
                     sample="1">
+                <field name="stage_id"/>
                 <field name="name"/>
                 <field name="project_id"/>
                 <field name="assigned_user_id"/>
                 <field name="date_deadline"/>
-                <field name="state"/>
                 <field name="priority"/>
                 <field name="tag_ids"/>
-                <field name="personal_stage_id"/>
                 <field name="display_name"/>
-                <progressbar field="state" colors='{"draft": "muted", "in_progress": "warning", "done": "success"}'/>
                 <templates>
                     <t t-name="kanban-box">
                         <div class="oe_kanban_global_click">
@@ -107,15 +169,9 @@
                                 <div class="o_kanban_record_bottom">
                                     <div class="oe_kanban_bottom_left">
                                         <field name="assigned_user_id" widget="many2one_avatar_user"/>
-                                        <field name="date_deadline" widget="remaining_days"/>
                                     </div>
                                     <div class="oe_kanban_bottom_right">
-                                        <field name="state" widget="label_selection" options='{"classes": {
-                                            "draft": "secondary",
-                                            "in_progress": "warning",
-                                            "done": "success",
-                                            "cancelled": "danger"
-                                        }}'/>
+                                        <field name="date_deadline" widget="remaining_days"/>
                                     </div>
                                 </div>
                             </div>
